config inicial